jenkins-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    app: jenkins-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.phan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
  tls:
    - hosts:
        - jenkins.phan
      secretName: jenkins-tls
